# adsorption_modelling_system

./: docker-compose.yml
backend/: Dockerfile  app.py  pyproject.toml
backend/my_scripts/: __init__.py  models.py
backend/my_scripts/.ipynb_checkpoints/: models-checkpoint.py
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: Header.tsx  NotFoundPage.tsx  index.ts
frontend/src/css/: ImageModal.css
frontend/src/env/: env.ts
frontend/src/pages/:  ReverseEngineering.tsx  Ads.tsx  Base.tsx  Home.tsx  MockData.tsx  PostMan.tsx  ReverseEngineering.tsx  index.ts
